infrastructure/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: frontend.local # Replace with your custom domain or use a ClusterIP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: backend.local # Replace with your custom domain or use a ClusterIP address
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
